[package]
name = "simpipe-preflight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
human-repr = "1.0.1"
nix = "0.26.2"
reqwest = "0.11"
tokio = { version = "1.25", features = ["full"] }